Removed all modals. Fixed sizing on mobile.

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -58,7 +58,10 @@ a.hover {
   }
 }
 // Contact
-.grecaptcha-badge { visibility: hidden; }
+.grecaptcha-badge { 
+  visibility: hidden;
+  left: 0 !important;
+}
 // AOS IE11 Fixes
 @media all and (-ms-high-contrast:none) {
   *::-ms-backdrop, [data-aos^=fade][data-aos^=fade],[data-aos^=zoom][data-aos^=zoom] {
