--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,6 +4,7 @@ header.header {
   padding: 30px;
   .logo {
     display: block;
+    width: 100%;
     max-width: 620px;
     margin: 0 auto;
   }
